# mixtura-balancer-tournament

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
examples/: test_client.py  test_client_tournament41.py  tournament41.json
nsga_balancer/: CMakeLists.txt  nsga_engine.cpp  nsga_engine.hpp  pybind11_bindings.cpp  pyproject.toml
nsga_balancer/nsga_balancer/: __init__.py  _core.pyi  models.py  quality_evaluator.py  wrapper.py
nsga_balancer/tests/: conftest.py  test_models.py  test_quality_evaluator.py
src/mixtura_balancer_tournament/: __init__.py  env_config.py  logging_setup.py
src/mixtura_balancer_tournament/app/: exceptions.py  main.py  schemas.py
src/mixtura_balancer_tournament/domain/: balance_engine.py
src/mixtura_balancer_tournament/domain/models/: __init__.py  balance.py  balance_request.py
