[project]
name = "mixtura-balancer-tournament"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faststream[cli,rabbit]>=0.6.7",
    "nsga-balancer",
    "pydantic-settings>=2.13.1"
]

[tool.uv.sources]
nsga-balancer = { path = "nsga_balancer" }

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
