[build-system]
requires = ["scikit-build-core", "pybind11", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "nsga-balancer"
version = "1.0.0"
description = "NSGA-II team balancer with C++ implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["balance", "game", "team", "nsga", "genetic", "c++"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pybind11>=2.6.0",
]

[project.urls]
Repository = "https://github.com/yourusername/nsga-balancer"

[tool.scikit-build]
cmake.version = ">=3.12"
cmake.build-type = "Release"
wheel.packages = ["nsga_balancer"]
sdist.include = ["CMakeLists.txt", "pybind11_bindings.cpp", "nsga_engine.cpp", "nsga_engine.hpp"]

[tool.scikit-build.cmake.define]
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "ON"
PYTHON_VERSION_MIN_MINOR = "1"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501", "W293"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
